# homaya

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  confused.md  feature_request.md
crates/homaya-algorithms/: Cargo.toml
crates/homaya-algorithms/src/: bernstein_vazirani.rs  deutsch.rs  grover.rs  lib.rs
crates/homaya-core/src/: circuit.rs  error.rs  lib.rs
crates/homaya-sim/src/: lib.rs  simulator.rs  statevector.rs
crates/quasar-algorithms/: Cargo.toml
crates/quasar-algorithms/src/: lib.rs
crates/quasar-backends/: Cargo.toml
crates/quasar-backends/src/: lib.rs
crates/quasar-compiler/: Cargo.toml
crates/quasar-compiler/src/: lib.rs
crates/quasar-core/: Cargo.toml
crates/quasar-core/src/: circuit.rs  lib.rs
crates/quasar-ir/: Cargo.toml
crates/quasar-ir/src/: lib.rs
crates/quasar-runtime/: Cargo.toml
crates/quasar-runtime/src/: lib.rs
crates/quasar-sim/: Cargo.toml
crates/quasar-sim/src/: lib.rs  simulator.rs  statevector.rs
docs/learn/: course.html  index.html  interactive.html
examples/rust/: algorithms_showcase.rs  demo.rs  sim_demo.rs  verify_correctness.rs
tools/homaya-cli/src/: main.rs
tools/quasar-cli/: Cargo.toml
