[package]
name = "quasar-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "QUASAR command-line interface"

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
quasar-core = { path = "../../crates/quasar-core" }
clap.workspace = true
